# MindDrop

./: INSTALLATION.md  LICENSE  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  README.md  index.html  package.json  verify.sh
MindDrop/: README.md  vite.config.ts
MindDrop/scripts/: cargo-check.sh  run-dev.sh
MindDrop/src/: App.jsx
MindDrop/src-tauri/: Cargo.toml  f5tts_generate.py  generate_image.py  tauri.conf.json
MindDrop/src-tauri/src/: ai_runner.rs  commands.rs  main.rs  memory_estimator.rs  system_info.rs
MindDrop/src/components/Chat/: Chat.css  Chat.jsx
MindDrop/src/components/Diffusers/: Diffusers.jsx
MindDrop/src/components/Models/: Models.css
MindDrop/src/components/Settings/: Settings.css  Settings.jsx
Plugins/example-text-transform/: README.md  plugin.json  transform.py
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  f5tts_generate.py  generate_image.py  generate_video.py  plugin_config.json  tauri.conf.json
src-tauri/src/: agent_executor.rs  ai_runner.rs  auto_mode.rs  commands.rs  execution_config.rs  inference_runner.rs  main.rs  system_profiler.rs
src/components/AgentMode/: AgentMode.css  AgentMode.jsx
src/components/Chat/: Chat.css  Chat.jsx
src/components/Diffusers/: Diffusers.css
src/components/ModelManager/: ModelManager.css  ModelManager.jsx
src/components/Models/: Models.jsx
src/components/Plugins/: Plugins.css  Plugins.jsx
src/components/Settings/: Settings.jsx
src/components/SystemStats/: SystemStats.jsx
src/components/TTSAdvancedSettings/: TTSAdvancedSettings.jsx
(+3 files in other folders)
